[2단계 - 블랙잭 베팅] 이리내(성채연) 미션 제출합니다. (#518)
* refactor: depth 2였던 for문 수정

* refactor: 메소드 명 수정

* docs: 기능 목록 추가

* test: 플레이어가 버스트 일 때 승패 판단 테스트 작성

* test: 플레이어가 블랙잭일 때 승패 판단 테스트 작성

* test: 플레이어가 스탠드일 때 승패판단 테스트 작성

* test: 딜러 테스트 코드 작성

* refactor: Participant클래스의 게터에서 원시값을 넘기도록 수정

* test: 테스트 코드 수정

* refactor: getter에서 리스트를 반환할 때 방어적 복사 적용

* refactor: DealerInitialState 분리

* test: 테스트 코드 수정

* refactor: 공백 및 import 정리

* docs: 기능 목록 수정

* docs: 기능 목록 추가

* test: 베팅 금액이 양의 정수인지 테스트 작성

* feat: 베팅 금액을 입력받는 기능 구현

* refactor: 생성자에서 파라미터로 리스트 받을 때 방어적 복사 적용

* feat: Player 클래스에 베팅 금액 필드 추가

* test: 테스트 코드 수정

* docs: 기능 목록 추가

* test: 베팅 금액이 만원 단위가 아니면 예외처리 테스트 작성

* feat: 베팅 금액이 만원 단위가 아니면 예외처리 구현

* test: 플레이어의 수익을 계산하는 테스트 작성

* feat: 수익 계산 기능 구현

* test: 카드들을 상수로 분리

* docs: 구현 기능 표시

* docs: 구현 기능 표시

* test: 테스트 코드 추가

* refactor: 메소드 분리 및 패키지 이동

* refactor: 변수명 수정

* refactor: 플레이어가 자신의 승패 여부만 알면 수익을 구할 수 있도록 수정

* test: 테스트 코드 수정

* refactor: 불필요한 메소드 삭제

* refactor: 메소드 분리

* refactor: BlackjackSate, BustState, StandState에서 겹치는 부분을 FinalState로 위임

* refactor: 딜러의 수익 계산을 Participants에서 하도록 수정

* refactor: DrawState, InitialState 추상클래스 추가 및 게임 상태 확인 방법 수정

* docs: 기능 목록 오타 수정

* refactor: BetAmount static 메소드 제거 및 패키지 변경

* test: 패키지 변경

* test: 인자값 수정

* test: 공백 두줄이었던 부분 수정

* refactor: dto 변환로직 이동

* refactor: 베팅 금액을 입력 받을 때 이름의 양옆 공백 제거된 상태로 출력하도록 수정

* test: 딜러의 수익을 계산하는 테스트 작성

* refactor: 딜러의 수익은 딜러가 계산하도록 수정

* test: 딜러가 첫 카드 한장만을 공개하는지 테스트 작성

* test: 플레이어의 수익 계산 테스트 코드 추가

* refactor: 상태 전이 과정 주석 추가

* test: 플레이어가 스탠드로 전환하는지 테스트 작성

* test: 플레이어 관련 테스트 코드 수정

* test: Result 관련 테스트 수정

* test: 참여자들의 수익을 잘 반환하는지 테스트 작성

* refactor: 불필요한 메소드 삭제

* refactor: for문 중첩을 private 메서드로 분리

* test: HandFixtures 생성 및 테스트 코드 수정

* test: 코드 정렬