@@ -4,7 +4,6 @@ import blackjack.model.card.Card;
 import blackjack.model.card.CardNumber;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Hand {
@@ -18,7 +17,7 @@ public class Hand {
     }
 
     public Hand(List<Card> cards) {
-        this.cards = cards;
+        this.cards = new ArrayList<>(cards);
     }
 
     public void add(Card card) {
@@ -29,27 +28,23 @@ public class Hand {
         int score = cards.stream()
                 .mapToInt(card -> card.getNumber().getScore())
                 .sum();
-        if(hasAceCard() && isNotBustEvenIfTakeBonusScore(score)){
+        if (hasAceCard() && isNotBustEvenIfTakeBonusScore(score)) {
             return score + BONUS_SCORE;
         }
         return score;
     }
 
-    private boolean hasAceCard(){
+    private boolean hasAceCard() {
         return cards.stream()
                 .map(Card::getNumber)
                 .anyMatch(cardNumber -> cardNumber.equals(CardNumber.ACE));
     }
 
-    private boolean isNotBustEvenIfTakeBonusScore(int score){
+    private boolean isNotBustEvenIfTakeBonusScore(int score) {
         return score + BONUS_SCORE <= BLACKJACK_NUMBER;
     }
 
     public List<Card> getCards() {
-        return Collections.unmodifiableList(cards);
-    }
-
-    public int size(){
-        return cards.size();
+        return List.copyOf(cards);
     }
 }
